# Juge

./: Cargo.toml  README.md
src/: db.rs  error.rs  juge.rs  main.rs  setting.rs
src/commands/: mod.rs  mute.rs
