[package]
name = "juge"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "22.2.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.tokio]
version = "1.19.2"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]